# rust-matrix

./: .gitignore  Cargo.toml  README.md
src/: main.rs
