[package]
name = "monbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
tracing = "0.1.4"
tracing-subscriber = { version = "0.3" , features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
matrix-sdk = "0.14"
rand = "0.9.2"       
dirs = "6"
